[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/platform.png" type="Texture" id=1]
[ext_resource path="res://player/Bird.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Mover.gd" type="Script" id=3]
[ext_resource path="res://player/bar.png" type="Texture" id=4]
[ext_resource path="res://objects/Cargo.tscn" type="PackedScene" id=5]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.5

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.9895, 16.1326 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 85.9817, 36.0286 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 80.0052, 32.0182 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96.0026, 3.93758 )

[node name="Platform" type="RigidBody2D"]
position = Vector2( -6.51925e-09, 7.62939e-06 )
rotation = 0.000650161
mass = 0.5
physics_material_override = SubResource( 3 )
gravity_scale = 0.5
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.52588e-05, -95.9376 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="PlatformCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0.0728073, -16.1327 )
rotation = 4.07453e-10
shape = SubResource( 1 )

[node name="Motor" type="RigidBody2D" parent="."]
position = Vector2( -0.0624008, -191.938 )
collision_mask = 0
mode = 2
gravity_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Motor"]
position = Vector2( -2.08064, -36.0333 )
rotation = 3.49246e-10
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Motor"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="LeftBird" parent="Motor" instance=ExtResource( 2 )]
position = Vector2( -64.0624, -39.9832 )

[node name="RightBird" parent="Motor" instance=ExtResource( 2 )]
position = Vector2( 63.9376, -40.0671 )
prefix = "right"

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( -0.0624008, -191.938 )
node_a = NodePath("../Motor")
node_b = NodePath("..")

[node name="Cargo" parent="." instance=ExtResource( 5 )]
position = Vector2( 63.9688, -48.0416 )
rotation = 0.0

[node name="Cargo3" parent="." instance=ExtResource( 5 )]
position = Vector2( 7.96878, -48.0052 )
rotation = 0.0

[node name="Cargo2" parent="." instance=ExtResource( 5 )]
position = Vector2( -48.0312, -47.9688 )
rotation = 0.0

[node name="OnArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="OnAreaCollider" type="CollisionShape2D" parent="OnArea"]
position = Vector2( -0.0260016, -63.9818 )
rotation = 1.74623e-10
shape = SubResource( 4 )

[node name="LandingDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandingDetector"]
position = Vector2( 0.00260065, 3.99999 )
rotation = 5.82076e-11
shape = SubResource( 5 )
